add_subdirectory(_common)
add_subdirectory(AudioToCC)
add_subdirectory(BigClock)
add_subdirectory(CpuRam)
add_subdirectory(Image)
add_subdirectory(KVRBrowser)
add_subdirectory(MiddyMorphy)
add_subdirectory(midiChordAnalyzer)
add_subdirectory(midiChords)
add_subdirectory(midiChs)
add_subdirectory(midiCurve)
add_subdirectory(midiIn)
add_subdirectory(midiKeyboard)
add_subdirectory(midiLooper)
add_subdirectory(midiMonitor)
